# patres-test-task

./: .dockerignore  .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_10_0419-a9983926ce46_in.py  2025_06_11_0116-a33bfe6ef0de_added_librarians.py  2025_06_11_2259-b189622ea853_added_books.py  2025_06_12_0021-3e0695f3b7be_added_readers.py  2025_06_13_0250-8b7f88be583c_added_borrow_and_return_of_books.py  2025_06_14_0142-1f279d6c786e_added_description_field_to_book_model.py  2025_06_14_0634-2f0be826a996_rename_librarian_password_field_to_.py  2025_06_14_0713-eba99207eb23_added_cascade_for_borrowedbook.py
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/books/: dao.py  models.py  router.py  schemas.py  service.py
src/core/: config.py  dao.py  database.py  security.py
src/librarians/: dao.py  deps.py  models.py  router.py  schemas.py  service.py
src/readers/: dao.py  models.py  router.py  schemas.py
tests/: conftest.py  fixtures.py  test_auth.py  test_books.py
